@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.570 2004-05-13 01:13:56 castaglia Exp $
+$Id: NEWS,v 1.571 2004-05-19 17:07:48 castaglia Exp $
 
 CVS
 ---------------------------------
@@ -26,6 +26,9 @@ CVS
 - Bug 2407 - mod_auth_file does not allow for proper cascading of "end" and
   "set" auth requests.
 - Bug 2410 - CreateHome always copies skel directory.
+- Bug 2336 - Use of /dev/log on Solaris leads to kernel memory leak.
+  ProFTPD's use of the /dev/log device on Solaris was tickling a Solaris
+  kernel bug that caused the Solaris kernel to leak memory.
 
 1.2.10rc1 - Released 28-Apr-2004
 ---------------------------------
